feat: add order create, findAll, findOne, complete endpoints and update documentation
